--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basket Example</title>
+    <title>CSS Animation</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="wrapper">
         <img src="mario-examples/img/cloud.png" alt="Cloud">
+        <div class="circle">Hover Me</div>
     </div>
 </body>
 </html>
