--- a/mario-examples/index.html
+++ b/mario-examples/index.html
@@ -9,5 +9,6 @@
   <div class="road">
     <div class="lines"></div>
     <img src="img/mario.png" class="mario" alt="Mario">
+    <img src="img/luigi.png" class="luigi" alt="Luigi">
   </div>
 </body>
