--- a/mario-examples/index.html
+++ b/mario-examples/index.html
@@ -4,7 +4,10 @@
   <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <div class="sky"></div>
+  <div class="sky">
+    <img src="img/cloud.png" class="cloud" alt="Cloud">
+    <img src="img/cloud.png" class="cloud" alt="Cloud">
+  </div>
   <div class="grass"></div>
   <div class="road">
     <div class="lines"></div>
